United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6885297 java -XX:RefDiscoveryPolicy=2 or -XX:TLABWasteTargetPercent=0 cause VM crash
6885297 : java -XX:RefDiscoveryPolicy=2 or -XX:TLABWasteTargetPercent=0 cause VM crash

Details
Type:
Bug
Submit Date:
2009-09-24
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:

Sub Tasks

Description
The error should be reported without VM crashes.

Here is the output.
-->java -XX:RefDiscoveryPolicy=2
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (referenceProcessor.cpp:94), pid=4141, tid=2
#  Error: guarantee(RefDiscoveryPolicy == ReferenceBasedDiscovery || RefDiscoveryPolicy == ReferentBasedDiscovery,"Unrecongnized RefDiscoveryPolicy")
#
# JRE version: 7.0-b72
# Java VM: Java HotSpot(TM) Server VM (17.0-b01 mixed mode solaris-x86 )
# An error report file with more information is saved as:
# /tmp/xx/hs_err_pid4141.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#
Abort (core dumped)
Also -XX:TLABWasteTargetPercent=0 causes VM crash.

                                    

Comments
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/745c853ee57f,ChangeRequest=6885297
                                     
2010-01-30
SUGGESTED FIX

Perform a suitable interval range check for the two flags listed in the CR.
                                     
2010-01-29
EVALUATION

The two flags in this report have been given invalid out-of-range values on the command line. Was this part of a security audit?
                                     
2009-12-10



Hardware and Software, Engineered to Work Together